src/GorSharp.Parser/Generated/GorSharpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C://Personal//Genel//Projeler//Gör#//src//GorSharp.Parser//..//..//grammar//GorSharp.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace GorSharp.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GorSharpParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OLSUN=1, YAZDIR=2, YENISATIRA_YAZDIR=3, EGER=4, YOKSA_EGER=5, DEGILSE=6, 
		DONGU=7, TEKRARLA=8, HER=9, FONKSIYON=10, DONDUR=11, DENE=12, HATA_VARSA=13, 
		SONUNDA=14, SINIF=15, KURUCU=16, BU=17, MIRAS=18, BASLA=19, OKU=20, OKU_SATIR=21, 
		KIR=22, DEVAM=23, SONRA=24, ISE=25, OLURSA=26, IKEN=27, MI=28, SAYET=29, 
		BOYUNCA=30, SURECE=31, DEGISKENI=32, OLARAK=33, DOGRU=34, YANLIS=35, EVET=36, 
		HAYIR=37, BOS=38, SAYI=39, METIN=40, MANTIK=41, ONDALIK=42, KARAKTER=43, 
		VE=44, VEYA=45, YA_DA=46, HEM_DE=47, NE_DE=48, NE=49, DEGIL=50, ESITTIR=51, 
		ESIT_DEGILDIR=52, BUYUKTUR=53, KUCUKTUR=54, BUYUK_ESITTIR=55, KUCUK_ESITTIR=56, 
		BUYUK=57, KUCUK=58, ESIT=59, ASSIGN=60, PLUS=61, MINUS=62, STAR=63, SLASH=64, 
		PERCENT=65, LPAREN=66, RPAREN=67, LBRACE=68, RBRACE=69, SEMI=70, COLON=71, 
		COMMA=72, DOT=73, INTEGER_LITERAL=74, DOUBLE_LITERAL=75, STRING_LITERAL=76, 
		ABLATIVE_NUMBER=77, IDENTIFIER=78, WS=79, LINE_COMMENT=80, BLOCK_COMMENT=81;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_assignmentStatement = 2, RULE_typeName = 3, 
		RULE_printStatement = 4, RULE_suffixMethodStatement = 5, RULE_ifStatement = 6, 
		RULE_whileStatement = 7, RULE_conditionParticle = 8, RULE_loopParticle = 9, 
		RULE_declarationParticle = 10, RULE_forStatement = 11, RULE_forInit = 12, 
		RULE_forUpdate = 13, RULE_functionDefinition = 14, RULE_paramList = 15, 
		RULE_param = 16, RULE_returnStatement = 17, RULE_breakStatement = 18, 
		RULE_continueStatement = 19, RULE_expressionStatement = 20, RULE_block = 21, 
		RULE_expression = 22, RULE_orExpression = 23, RULE_andExpression = 24, 
		RULE_norExpression = 25, RULE_equalityExpression = 26, RULE_comparisonExpression = 27, 
		RULE_additiveExpression = 28, RULE_multiplicativeExpression = 29, RULE_unaryExpression = 30, 
		RULE_primary = 31, RULE_argList = 32;
	public static readonly string[] ruleNames = {
		"program", "statement", "assignmentStatement", "typeName", "printStatement", 
		"suffixMethodStatement", "ifStatement", "whileStatement", "conditionParticle", 
		"loopParticle", "declarationParticle", "forStatement", "forInit", "forUpdate", 
		"functionDefinition", "paramList", "param", "returnStatement", "breakStatement", 
		"continueStatement", "expressionStatement", "block", "expression", "orExpression", 
		"andExpression", "norExpression", "equalityExpression", "comparisonExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "primary", 
		"argList"
	};

	private static readonly string[] _LiteralNames = {
		null, "'olsun'", null, null, null, null, null, null, "'tekrarla'", "'her'", 
		"'fonksiyon'", null, "'dene'", "'hata_varsa'", "'sonunda'", null, "'kurucu'", 
		"'bu'", "'miras'", null, "'oku'", null, null, "'devam'", "'sonra'", "'ise'", 
		"'olursa'", "'iken'", null, null, "'boyunca'", null, null, "'olarak'", 
		null, null, "'evet'", null, null, null, "'metin'", null, null, "'karakter'", 
		"'ve'", "'veya'", "'ya da'", "'hem de'", "'ne de'", "'ne'", null, null, 
		null, null, null, null, null, null, null, null, "'='", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OLSUN", "YAZDIR", "YENISATIRA_YAZDIR", "EGER", "YOKSA_EGER", "DEGILSE", 
		"DONGU", "TEKRARLA", "HER", "FONKSIYON", "DONDUR", "DENE", "HATA_VARSA", 
		"SONUNDA", "SINIF", "KURUCU", "BU", "MIRAS", "BASLA", "OKU", "OKU_SATIR", 
		"KIR", "DEVAM", "SONRA", "ISE", "OLURSA", "IKEN", "MI", "SAYET", "BOYUNCA", 
		"SURECE", "DEGISKENI", "OLARAK", "DOGRU", "YANLIS", "EVET", "HAYIR", "BOS", 
		"SAYI", "METIN", "MANTIK", "ONDALIK", "KARAKTER", "VE", "VEYA", "YA_DA", 
		"HEM_DE", "NE_DE", "NE", "DEGIL", "ESITTIR", "ESIT_DEGILDIR", "BUYUKTUR", 
		"KUCUKTUR", "BUYUK_ESITTIR", "KUCUK_ESITTIR", "BUYUK", "KUCUK", "ESIT", 
		"ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "SEMI", "COLON", "COMMA", "DOT", "INTEGER_LITERAL", 
		"DOUBLE_LITERAL", "STRING_LITERAL", "ABLATIVE_NUMBER", "IDENTIFIER", "WS", 
		"LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GorSharp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GorSharpParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GorSharpParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GorSharpParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GorSharpParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4613375400876182928L) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 5893L) != 0)) {
				{
				{
				State = 66;
				statement();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 72;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentStatementContext assignmentStatement() {
			return GetRuleContext<AssignmentStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintStatementContext printStatement() {
			return GetRuleContext<PrintStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SuffixMethodStatementContext suffixMethodStatement() {
			return GetRuleContext<SuffixMethodStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefinitionContext functionDefinition() {
			return GetRuleContext<FunctionDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakStatementContext breakStatement() {
			return GetRuleContext<BreakStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueStatementContext continueStatement() {
			return GetRuleContext<ContinueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionStatementContext expressionStatement() {
			return GetRuleContext<ExpressionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				assignmentStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75;
				printStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 76;
				suffixMethodStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 77;
				ifStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 78;
				whileStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 79;
				forStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 80;
				functionDefinition();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 81;
				returnStatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 82;
				breakStatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 83;
				continueStatement();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 84;
				expressionStatement();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 85;
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentStatementContext : ParserRuleContext {
		public AssignmentStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignmentStatement; } }
	 
		public AssignmentStatementContext() { }
		public virtual void CopyFrom(AssignmentStatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class TypedDeclarationContext : AssignmentStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GorSharpParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(GorSharpParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OLSUN() { return GetToken(GorSharpParser.OLSUN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(GorSharpParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationParticleContext declarationParticle() {
			return GetRuleContext<DeclarationParticleContext>(0);
		}
		public TypedDeclarationContext(AssignmentStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypedDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqualsAssignmentContext : AssignmentStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GorSharpParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GorSharpParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(GorSharpParser.SEMI, 0); }
		public EqualsAssignmentContext(AssignmentStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqualsAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InferredDeclarationContext : AssignmentStatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GorSharpParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OLSUN() { return GetToken(GorSharpParser.OLSUN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(GorSharpParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationParticleContext declarationParticle() {
			return GetRuleContext<DeclarationParticleContext>(0);
		}
		public InferredDeclarationContext(AssignmentStatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInferredDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentStatementContext assignmentStatement() {
		AssignmentStatementContext _localctx = new AssignmentStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_assignmentStatement);
		int _la;
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new TypedDeclarationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				Match(IDENTIFIER);
				State = 89;
				Match(COLON);
				State = 90;
				typeName();
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==DEGISKENI || _la==OLARAK) {
					{
					State = 91;
					declarationParticle();
					}
				}

				State = 94;
				expression();
				State = 95;
				Match(OLSUN);
				State = 96;
				Match(SEMI);
				}
				break;
			case 2:
				_localctx = new InferredDeclarationContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				Match(IDENTIFIER);
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==DEGISKENI || _la==OLARAK) {
					{
					State = 99;
					declarationParticle();
					}
				}

				State = 102;
				expression();
				State = 103;
				Match(OLSUN);
				State = 104;
				Match(SEMI);
				}
				break;
			case 3:
				_localctx = new EqualsAssignmentContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 106;
				Match(IDENTIFIER);
				State = 107;
				Match(ASSIGN);
				State = 108;
				expression();
				State = 109;
				Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SAYI() { return GetToken(GorSharpParser.SAYI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode METIN() { return GetToken(GorSharpParser.METIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MANTIK() { return GetToken(GorSharpParser.MANTIK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ONDALIK() { return GetToken(GorSharpParser.ONDALIK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KARAKTER() { return GetToken(GorSharpParser.KARAKTER, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGorSharpVisitor<TResult> typedVisitor = visitor as IGorSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17042430230528L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
